# automask_sam3

./: .gitignore  README.md  tech_requirement_sam3.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes.py  serializers.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: api.py
backend/app/services/: exporter.py  history.py  model_backend.py  queue.py  storage.py  workflow.py
backend/app/tests/: test_api.py  test_model_backend.py  test_storage_dng.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  file-utils.ts  index.css  types.ts  workflow-ui.ts
frontend/src/components/: ActionBar.tsx  AlertBanner.tsx  ConfirmationDialog.tsx  EmptyState.tsx  LoadingPanel.tsx  StatusBadge.tsx
frontend/src/hooks/: useAsyncResource.ts  useEditorInteractions.ts  usePolling.ts
frontend/src/pages/: DatasetPage.tsx  EditorPage.tsx  UploadPage.tsx
frontend/src/sections/dataset/: DatasetFilters.tsx  DatasetSummary.tsx  DatasetTaskTable.tsx
frontend/src/sections/editor/: EditorControls.tsx  EditorSidebar.tsx  EditorStage.tsx
frontend/src/sections/upload/: BackendReadinessCard.tsx  SelectionReview.tsx
frontend/src/styles/: components.css  dataset-page.css  editor-page.css  layout.css  tokens.css  upload-page.css
frontend/src/test/: dataset-page.test.tsx  editor-page.test.tsx  setup.ts  upload-page.test.tsx
